scrollbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,4 +129,6 @@ body {
 }
 .no-scrollbar::-webkit-scrollbar {
   display: none; 
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
 }
